fix spacing, wording, greenalert colour update

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -14,7 +14,7 @@ $header-font-size: 160%;
 $redalert-color: #bf5608;
 $redalert-text-color: white;
 $redalert-link-color: white;
-$greenalert-color: $color-1-dark;
+$greenalert-color: #163b64;
 $greenalert-text-color: white;
 $greenalert-link-color: white;
 $nav-font-size: 1em;
